# Parallelized-Connect-Four-Genetic-Search-Algorithm

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  calcAvg.py  main.c  test.c
benchmarks/: Compiler_Optimization.csv  OpenAccBenchmarks.csv  OpenMP_distributed.csv  OpenMP_not_distributed.csv  calcAvg.py  drawGraph.py
src/: CMakeLists.txt  README.md  argparse.c  benchmark.c  game.c  gameUI.c  geneticSearch.c  main.c
src/includes/: benchmark.h  game.h  gameUI.h  geneticSearch.h  raygui.h
test/: gameTest.c  geneticSearchTest.c  testMain.c
